# email-domain-validator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  pyproject.toml
.cursor/rules/: Guidelines.mdc  email-domain-validation.mdc  package-management.mdc  project-standards.mdc  rules-management.mdc
.cursor/rules/project-standards/: coding-guidelines.mdc  documentation-guidelines.mdc  linting-guidelines.mdc
.cursor/skills/: README.mdc
.cursor/skills/git-handling/: SKILL.md
.cursor/skills/linting/: SKILL.md
.cursor/skills/writing-documentation/: SKILL.md
.github/workflows/: checks.yml  ci.yml  publish.yml
src/: __init__.py  cli.py  dkim.py  dmarc.py  email_validation.py  exceptions.py  models.py  mx.py  runner.py  spf.py  ssl_.py  utils.py
tests/: test_dkim.py  test_dmarc.py  test_email_validation.py  test_exceptions.py  test_mx.py  test_runner.py  test_spf.py  test_ssl.py  test_utils.py
